# vray

./: .gitignore  CMakeLists.txt  LICENSE  build.ps1  build_result.txt  config.json  config_test_override.json  go.ps1  make.ps1  readme.md  run_tests.ps1  runtime_log.txt  runtime_log2.txt  session_log.txt  simulationplan.md  test.ps1  vars.lua
.github/workflows/: ci.yml
assets/: bloom.fs  fxaa.fs  grid.fs  grid.vs  lighting.fs  mech_alpha.lua  mech_bravo.lua  mech_charlie.lua  palette.fs  pastel.fs  xflat.fs  xflat.vs
docs/: architecture.md  do_evaluate.md  goals.md  luaplan.md  rules.md  tasks.md  templ_implement.md  templ_strategy.md  templ_vision.md  vray_eval.md  vray_implement.md  vray_strategy.md  vray_vision.md
scripts/: download_deps.bat
src/: app.cpp  app.h  backupcpp.txt  boss.cpp  boss.h  camControl.cpp  camControl.h  card.cpp  card.h  character_renderer.cpp  character_renderer.h  config.cpp  config.h  constants.h  entity.h  entityController.h  game.cpp  game.h  grid.cpp  grid.h  main.cpp  mesh.cpp  mesh.h  render.cpp  render.h  rlights_impl.cpp  test.cpp  ui.cpp  ui.h
src/boss/: boss.cpp  boss.h  bossCardSelectState.cpp  bossCardSelectState.h  bossEndGameState.cpp  bossEndGameState.h  bossNpcSelectState.cpp  bossNpcSelectState.h  bossPlayState.cpp  bossPlayState.h  bossStartupState.cpp  bossStartupState.h  bossState.h
src/common/: state.h  statemachine.h
src/platform/: platform.cpp  platform.h  raylib_input.cpp  raylib_input.h  raylib_render_backend.h  raylib_renderer.cpp  raylib_renderer.h  raylib_window.cpp  raylib_window.h  renderer_interface.h
src/platform/interface/: input_interface.h  render_backend.h  renderer_interface.h  window_interface.h
src/ui/cardui/: cardui.cpp  cardui.h  deck_panel.h  game_board_panel.cpp  game_board_panel.h  game_ui_panel.h  hand_panel.cpp  hand_panel.h  mech_slot_container.cpp  mech_slot_container.h
src/utils/: luaUtils.cpp  luaUtils.h  meshCompositeUtils.cpp  meshExtraShapeUtils.cpp  meshGenerateUtils.cpp  meshGenerateUtils.h  meshMathUtils.cpp  meshMathUtils.h  meshMech.cpp  meshMech.h  meshProcessUtils.cpp  meshProcessUtils.h  raii_handles.h
src/world/: world.cpp  world.h
tests/: boss_play_tests.cpp  card_game_tests.cpp  card_logic_tests.cpp  config_tests.cpp  entity_grid_tests.cpp  mech_tests.cpp  raii_and_backend_tests.cpp  render_tests.cpp  smoke_tests.cpp  world_tests.cpp
tests/mocks/: mock_render_backend.h
